--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,86 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9bdcbf', endColorstr='#4a9ad1',GradientType=1 );
   /* IE6-9 */ }
 
+.icon {
+  width: 25px;
+  height: 25px; }
+
+.icon__check {
+  background-image: url("../img/icons8-checked-96.png");
+  background-size: cover; }
+
+.icon-btn {
+  width: 44px;
+  height: 44px;
+  border: none;
+  margin-left: 5px;
+  cursor: pointer; }
+
+.icon-btn:disabled {
+  opacity: 0.3; }
+
+.icon-btn__check--green {
+  background-image: url("../img/icons8-checked-96.png");
+  background-size: cover; }
+
+.icon-btn__check--white {
+  background-image: url(../img/icons8-checked-48.png);
+  background-size: cover; }
+
+.icon-btn__add {
+  background-image: url(../img/plus-math-50.png);
+  background-size: cover; }
+
+.icon-btn__edit {
+  background-image: url(../img/icons8-edit-50.png);
+  background-size: cover; }
+
+.icon-btn__delete {
+  background-image: url(../img/trash-100.png);
+  background-size: cover; }
+
+.icon-btn__go {
+  background-image: url(../img/arrow-right.png);
+  background-size: cover; }
+
+.icon-btn__rgb {
+  background-image: url(../img/rgb-circle-1-50.png);
+  background-size: cover; }
+
+.icon-btn__return {
+  background-image: url(../img/icons8-left-100.png);
+  background-size: cover;
+  margin-right: 5px; }
+
+.reference-string {
+  min-height: 35px;
+  border: 1px solid #ccc;
+  margin-bottom: -1px; }
+
+.reference-header {
+  margin-bottom: 15px; }
+
+.reference-header img {
+  width: 44px;
+  height: 44px; }
+
+.reference-header h2 {
+  margin-left: 5px; }
+
+.enterprise-card-block {
+  margin-left: 55px; }
+
+.btn:disabled {
+  opacity: 0.3; }
+
+.keywords-card-select-color {
+  width: 70px;
+  height: 40px;
+  margin-bottom: 5px; }
+
+input:checked + label {
+  border: 1px solid black; }
+
 /*
 @import "src/sass/components/app.scss";
 @import "src/sass/components/font.scss";
